<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@mipmap/home2"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_search"
        android:icon="@mipmap/search2"
        android:title="@string/nav_search" />
    <item
        android:id="@+id/nav_camera"
        android:icon="@mipmap/camera2"
        android:title="@string/nav_camera" />
    <item
        android:id="@+id/nav_person"
        android:icon="@mipmap/personal2"
        android:title="@string/nav_person" />
    <item
        android:id="@+id/nav_setting"
        android:icon="@mipmap/setting2"
        android:title="@string/nav_setting" />

</menu>