<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".RecognitionResultActivity">

    <include
        layout="@layout/toolbar_layout"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_navigation"
        android:layout_marginTop="60dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp">

            <TextView
                android:id="@+id/foodId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:visibility="gone" />

            <TextView
                android:id="@+id/foodName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/noInfo"
                android:textColor="@android:color/background_dark"
                android:textSize="20dp"
                app:fontFamily="@font/yuppy" />

            <ImageView
                android:id="@+id/foodImg"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_below="@+id/foodName"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/detailBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/foodImg"
                android:layout_marginTop="20dp"
                android:background="@drawable/button"
                android:text="@string/detailBtn"
                android:textSize="20dp"
                android:textColor="@android:color/background_light"
                app:fontFamily="@font/yuppy"/>

            <Button
                android:id="@+id/renewBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/detailBtn"
                android:layout_marginTop="15dp"
                android:background="@drawable/button2"
                android:text="@string/renewBtn"
                android:textSize="20dp"
                android:textColor="@color/colorDark"
                app:fontFamily="@font/yuppy"/>

        </RelativeLayout>

    </ScrollView>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_navigation"
        android:background="@color/colorWhite"/>

</RelativeLayout>