<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InitialActivity"
    android:background="@mipmap/initial">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        app:srcCompat="@mipmap/seefood" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/cameraBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_span="2"
                android:background="@color/colorBtn"
                android:drawableTop="@drawable/ic_camera_50dp"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:text="@string/cameraBtn"
                android:textColor="@color/colorText"
                android:textSize="20dp"
                app:fontFamily="@font/yuppy" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/albumBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorBtn"
                android:drawableTop="@drawable/album"
                android:paddingLeft="40dp"
                android:paddingTop="20dp"
                android:paddingRight="40dp"
                android:paddingBottom="10dp"
                android:text="@string/albumBtn"
                android:textColor="@color/colorText"
                android:textSize="20dp"
                app:fontFamily="@font/yuppy" />

            <Button
                android:id="@+id/homeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@color/colorBtn"
                android:drawableTop="@drawable/ic_home_50dp"
                android:paddingLeft="40dp"
                android:paddingTop="20dp"
                android:paddingRight="40dp"
                android:paddingBottom="10dp"
                android:text="@string/homeBtn"
                android:textColor="@color/colorText"
                android:textSize="20dp"
                app:fontFamily="@font/yuppy" />
        </TableRow>
    </TableLayout>

</RelativeLayout>